--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/andyyu8588/soundcloudrapper/issues"
   },
-  "homepage": "https://github.com/andyyu8588/soundcloudrapper#readme"
+  "homepage": "https://github.com/andyyu8588/soundcloudrapper#readme",
+  "dependencies": {
+    "@angular/cli": "^9.0.7"
+  }
 }
