--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/andyyu8588/soundcloudrapper#readme",
   "dependencies": {
-    "@angular/cli": "^9.0.7"
+    "@angular/cli": "^9.0.7",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2"
   }
 }
