--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "@angular/cli": "^9.0.7",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2",
+    "socket.io": "^2.3.0",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
