--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
-    "mongod": "D:/MongoDB/bin/mongod.exe"
+    "mongod": "D:/MongoDB/bin/mongod.exe",
+    "mongo": "D:/MongoDB/bin/mongo.exe"
   },
   "repository": {
     "type": "git",
