--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.6",
     "socket.io": "^2.3.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "underscore": "^1.10.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
