--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.5.0",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
