--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@types/jquery": "^3.3.35",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
     "rxjs": "~6.5.4",
