--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
     "mongod": "D:/MongoDB/bin/mongod.exe",
-    "mongo": "D:/MongoDB/bin/mongo.exe"
+    "mongo": "D:/MongoDB/bin/mongo.exe",
+    "mongoda": "C:/MongoDB/Server/4.2/bin/mongod.exe",
+    "mongoa": "C:/MongoDB/Server/4.2/bin/mongo.exe"
   },
   "repository": {
     "type": "git",
