--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@types/jquery": "^3.3.35",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.0",
+    "mapbox-gl": "^1.9.1",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
