--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.6",
     "socket.io": "^2.3.0",
+    "socketio-auth": "^0.1.1",
     "typescript": "^3.8.3",
     "underscore": "^1.10.2"
   },
