--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.0",
-    "@angular/cdk": "^9.2.2",
+    "@angular/animations": "^9.1.6",
+    "@angular/cdk": "^9.2.3",
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/forms": "~9.1.0",
     "@angular/localize": "^9.1.2",
-    "@angular/material": "^9.2.2",
+    "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
