--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/andyyu8588/soundcloudrapper#readme",
   "dependencies": {
     "@angular/cli": "^9.0.7",
+    "bcrypt": "^4.0.1",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
     "socket.io": "^2.3.0",
     "socketio-auth": "^0.1.1",
