--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.6",
+    "multer": "^1.4.2",
     "socket.io": "^2.3.0",
     "socketio-auth": "^0.1.1",
     "typescript": "^3.8.3",
