--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,9 @@
     "@types/jquery": "^3.3.35",
     "angular-resizable-element": "^3.3.0",
     "bootstrap": "^4.4.1",
+    "countries-list": "^2.5.4",
+    "country-list": "^2.2.0",
+    "i18n-iso-countries": "^5.4.0",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.10.1",
     "moment": "^2.25.3",
