--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl=true",
+    "start": "ng serve --ssl=true --prod=true",
     "startTest": "ng serve --ssl=true --prod=false",
     "build": "ng build",
     "test": "ng test",
