--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,17 +44,17 @@
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.1",
     "@angular/language-service": "~10.0.1",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^12.12.47",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
