added icon and review format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "d:\\bhay python\\travelnetAI\\Scripts\\python.exe"
+    "python.pythonPath": "d:\\bhay python\\travelnetAI\\Scripts\\python.exe",
+    "emmet.triggerExpansionOnTab": true
 }
