--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "aot": "node --max-old-space-size=8192 ./node_modules/@angular/cli/bin/ng serve --ssl=true --prod --aot"
+
   },
   "private": true,
   "dependencies": {
