--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl=true --prod=true",
+    "start": "ng serve --ssl=true --prod=true --source-map=false --aot",
     "startTest": "ng serve --ssl=true --prod=false",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "aot": "node --max-old-space-size=8192 ./node_modules/@angular/cli/bin/ng serve --ssl=true --prod --aot"
-
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -32,7 +30,6 @@
     "bootstrap": "^4.4.1",
     "countries-list": "^2.5.4",
     "country-list": "^2.2.0",
-    "i18n-iso-countries": "^5.4.0",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.10.1",
     "moment": "^2.25.3",
