--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl=true --prod=true --source-map=false --aot",
-    "startTest": "ng serve --ssl=true --prod=false",
+    "start": "ng serve --ssl=true --aot",
+    "startTest": "ng serve --ssl=true --prod=false --aot",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.1",
-    "@angular/cdk": "^10.0.0",
-    "@angular/common": "~10.0.1",
-    "@angular/compiler": "~10.0.1",
-    "@angular/core": "~10.0.1",
-    "@angular/forms": "~10.0.1",
-    "@angular/localize": "^10.0.1",
-    "@angular/material": "^10.0.0",
-    "@angular/platform-browser": "~10.0.1",
-    "@angular/platform-browser-dynamic": "~10.0.1",
-    "@angular/router": "~10.0.1",
+    "@angular/animations": "^10.0.2",
+    "@angular/cdk": "^10.0.1",
+    "@angular/common": "~10.0.2",
+    "@angular/compiler": "~10.0.2",
+    "@angular/core": "~10.0.2",
+    "@angular/forms": "~10.0.2",
+    "@angular/localize": "^10.0.2",
+    "@angular/material": "^10.0.1",
+    "@angular/platform-browser": "~10.0.2",
+    "@angular/platform-browser-dynamic": "~10.0.2",
+    "@angular/router": "~10.0.2",
     "@ng-bootstrap/ng-bootstrap": "^6.0.3",
     "@rxweb/reactive-form-validators": "^2.0.0-rc2",
     "@types/jquery": "^3.3.35",
@@ -33,30 +33,30 @@
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.10.1",
     "moment": "^2.25.3",
-    "rxjs": "~6.5.4",
+    "rxjs": "~6.6.0",
     "socket.io-client": "^2.3.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "@angular/cli": "~10.0.0",
-    "@angular/compiler-cli": "~10.0.1",
-    "@angular/language-service": "~10.0.1",
+    "@angular-devkit/build-angular": "~0.1000.1",
+    "@angular/cli": "~10.0.1",
+    "@angular/compiler-cli": "~10.0.2",
+    "@angular/language-service": "~10.0.2",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.47",
+    "@types/node": "^14.0.14",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "~8.10.2",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.6"
   }
 }
