--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -65,7 +65,15 @@
                   "maximumError": "10kb"
                 }
               ]
-            }
+            },
+            "dev": {
+              "fileReplacements": [
+                  {
+                      "replace": "src/environments/environment.ts",
+                      "with": "src/environments/environment.dev.ts"
+                  }
+              ]
+          }
           }
         },
         "serve": {
@@ -78,6 +86,9 @@
           "configurations": {
             "production": {
               "browserTarget": "frontend:build:production"
+            },
+             "dev": {
+              "browserTarget": "frontend:build:dev"
             }
           }
         },
