--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl=true --aot -c=dev",
-    "start:local": "ng serve --ssl=true --aot --prod=false",
+    "start": "ng serve --ssl=true -c=dev",
+    "start:local": "ng serve --ssl=true --prod=false",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
