--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.2",
-    "@angular/cdk": "^10.0.1",
-    "@angular/common": "~10.0.2",
-    "@angular/compiler": "~10.0.2",
-    "@angular/core": "~10.0.2",
-    "@angular/forms": "~10.0.2",
-    "@angular/localize": "^10.0.2",
-    "@angular/material": "^10.0.1",
-    "@angular/platform-browser": "~10.0.2",
-    "@angular/platform-browser-dynamic": "~10.0.2",
-    "@angular/router": "~10.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^6.0.3",
-    "@rxweb/reactive-form-validators": "^2.0.0-rc2",
+    "@angular/animations": "^10.0.5",
+    "@angular/cdk": "^10.1.0",
+    "@angular/common": "^10.0.5",
+    "@angular/compiler": "^10.0.5",
+    "@angular/core": "^10.0.5",
+    "@angular/forms": "^10.0.5",
+    "@angular/localize": "^10.0.5",
+    "@angular/material": "^10.1.0",
+    "@angular/platform-browser": "^10.0.5",
+    "@angular/platform-browser-dynamic": "^10.0.5",
+    "@angular/router": "^10.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@rxweb/reactive-form-validators": "^2.0.0",
     "@types/jquery": "^3.3.35",
-    "@types/mapbox-gl": "^1.11.1",
-    "angular-resizable-element": "^3.3.0",
+    "angular-resizable-element": "^3.3.3",
     "bootstrap": "^4.4.1",
-    "countries-list": "^2.5.4",
+    "countries-list": "^2.5.5",
     "country-list": "^2.2.0",
     "jquery": "^3.5.1",
-    "mapbox-gl": "^1.10.1",
+    "mapbox-gl": "^1.11.1",
     "moment": "^2.25.3",
     "rxjs": "~6.6.0",
     "socket.io-client": "^2.3.0",
@@ -40,13 +39,14 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "~10.0.1",
-    "@angular/compiler-cli": "~10.0.2",
-    "@angular/language-service": "~10.0.2",
+    "@angular-devkit/build-angular": "^0.1000.4",
+    "@angular/cli": "^10.0.4",
+    "@angular/compiler-cli": "^10.0.5",
+    "@angular/language-service": "^10.0.5",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.0.14",
+    "@types/mapbox-gl": "^1.11.1",
+    "@types/node": "^14.0.25",
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -58,6 +58,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.10.2",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.6"
+    "typescript": "^3.9.7"
   }
 }
