--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "underscore": "^1.10.2"
   },
   "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.4"
   }
 }
