--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl=true -c=dev",
+    "start": "ng serve -c=dev",
     "startlocal": "ng serve --ssl=true --prod=false",
     "build": "ng build --watch=true -c=dev",
     "test": "ng test",
